gamestar/static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Saira+Stencil+One&display=swap');

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: #333;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Saira Stencil One', cursive;
}

.text-shadow {
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

.hoverable:hover {
    box-shadow: 0px 3px 2px 0px #ffca28;
}

.container {
    position: relative;
}

#page-logo {
    max-width: 100%;
    margin-top: 1rem;
}

#nav-logo {
    height: 45px;
    margin-top: 6px;
}

#flashes {
    position: absolute;
    top: 40px;
    right: 0;
    left: 0;
    font-size: 1.25rem;
    font-weight: bold;
}

.flash {
    position: relative;
    cursor: pointer;
    z-index: 2;
}

.flash i {
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
    pointer-events: none;
    font-size: 1.5rem;
}

main {
    flex: 1 0 auto;
}

.card-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.card {
    width: 280px;
}

.card .card-title {
    font-size: 1.1rem;
}

#register-dialog,
#login-dialog,
#profile-dialog {
    margin-top: 4rem;
}

#register-form .row .input-field,
#login-form .row .input-field,
#profile-form .row .input-field {
    padding-right: 2rem;
}

textarea.materialize-textarea:focus:not([readonly])+label,
input[type=text]:not(.browser-default):focus:not([readonly])+label,
input[type=number]:not(.browser-default):focus:not([readonly])+label,
input[type=password]:not(.browser-default):focus:not([readonly])+label {
    color: #ffca28;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

textarea.materialize-textarea:focus:not([readonly]),
input[type=text]:not(.browser-default):focus:not([readonly]),
input[type=number]:not(.browser-default):focus:not([readonly]),
input[type=password]:not(.browser-default):focus:not([readonly]) {
    border-bottom: 1px solid #ffca28;
    box-shadow: 0 1px 0 0 #ffca28;
}

textarea.materialize-textarea:not([readonly])+label,
input[type=text]:not(.browser-default):not([readonly])+label,
input[type=number]:not(.browser-default):not([readonly])+label,
input[type=password]:not(.browser-default):not([readonly])+label {
    color: #ccc;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

textarea.materialize-textarea:not([readonly]),
input[type=text]:not(.browser-default):not([readonly]),
input[type=number]:not(.browser-default):not([readonly]),
input[type=password]:not(.browser-default):not([readonly]) {
    border-bottom: 1px solid #ccc;
    box-shadow: 0 1px 0 0 #ccc;
}

.rating {
    display: flex;
    justify-content: center;
}

.rating-outer {
    position: relative;
    display: inline-block;
}

.rating-inner {
    position: absolute;
    top: 0;
    left: 0;
    white-space: nowrap;
    overflow: hidden;
    width: 0;
}

.rating-outer::before {
    content: "\f005 \f005 \f005 \f005 \f005";
    font-family: 'Font Awesome 6 Free';
    font-weight: 900;
    color: #999;
    font-size: 2rem;
}

.rating-inner::before {
    content: "\f005 \f005 \f005 \f005 \f005";
    font-family: 'Font Awesome 6 Free';
    font-weight: 900;
    color: #f8ce0b;
    font-size: 2rem;
}

.card .rating-outer::before,
.card .rating-inner::before {
    font-size: 1.75rem;
}

input[type=range]::-webkit-slider-thumb {
    background-color: #ffca28;
}

input[type=range]::-moz-range-thumb {
    background-color: #ffca28;
}

input[type=range]::-ms-thumb {
    background-color: #ffca28;
}

input[type=range]+.thumb {
    background-color: #ffca28;
}

input[type=range]+.thumb.active .value {
    color: #000;
    font-weight: bold;
}

@media screen and (min-width: 600px) {
    #nav-logo {
        margin-top: 0.75rem;
    }

    .card {
        width: 250px;
    }

}

@media screen and (min-width: 993px) {
    .card {
        width: 220px;
    }

}

@media screen and (min-width: 1200px) {
    .card {
        width: 200px;
    }

}

